bridges/jac-bridge/tests/ui/unsupported_vec_element.stderr
error: unsupported return type: `f64`
  --> tests/ui/unsupported_vec_element.rs:10:34
   |
10 |         pub fn bad(&self) -> Vec<f64> {
   |                                  ^^^
